# claude-log-viewer

./: .gitignore  LICENSE  Makefile  README.md
backend/: .gitignore  .task_status.md  cli.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  test_parser.py  test_subagent_parser.py
backend/routers/: __init__.py  conversations.py  messages.py  projects.py  search.py  subagents.py  sync.py  usage.py  websocket.py
backend/services/: __init__.py  file_watcher.py  log_parser.py  port_utils.py  server_manager.py  subagent_parser.py  sync_service.py  timezone_utils.py  websocket_manager.py
backend/services/usage/: __init__.py  aggregator.py  analysis.py  calculations.py  data_processors.py  models.py  plans.py  pricing.py  reader.py
backend/test_design/: test_design_server_control.md  test_design_timezone.md
backend/tests/: __init__.py  test_server_manager.py  test_timezone_utils.py
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  usage.ts
frontend/src/components/: ConversationList.tsx  MessageCard.tsx  MessageTimeline.tsx  ProjectList.tsx  SearchBar.tsx
frontend/src/components/chat/: AssistantBubble.tsx  ChatContainer.tsx  CopyDropdown.tsx  MessageBubble.tsx  ParallelTaskGroup.tsx  SubagentTimeline.tsx  index.ts  (+6 more)
frontend/src/hooks/: useApi.ts  useWebSocket.ts
frontend/src/store/: index.ts
frontend/src/types/: index.ts  timeline.ts  usage.ts
frontend/src/utils/: copyFormatters.ts  eventConverter.ts  formatTime.ts
(+20 files in other folders)
