[project]
name = "claude-log-viewer-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "pydantic>=2.10.0",
    "python-multipart>=0.0.12",
    "watchdog>=4.0.0",
    "websockets>=12.0",
    "numpy>=1.24.0",
    "rich>=13.0.0",
]

[project.scripts]
claude-log-viewer = "cli:main"
